crates/gridwell-writer-latex/tests/snapshots/snapshots__single-column.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{l}
\toprule
Item \\
\midrule
First \\
Second \\
Third \\
\bottomrule
\end{tabular}
