crates/gridwell-writer-latex/tests/snapshots/snapshots__single-row.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: out
---
\begin{tabular}{llll}
\toprule
W & X & Y & Z \\
\midrule
1 & 2 & 3 & 4 \\
\bottomrule
\end{tabular}
