crates/gridwell-writer-latex/tests/snapshots/snapshots__snapshot_content_rich.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: "render(\"minimal/content_rich.json\")"
---
\begin{tabular}{ll}
\toprule
Label & Content \\
\midrule
Rich content & Normal text, bold text\newline second line with \textsuperscript{*} \\
Image cell & Trend: sparkline \\
\bottomrule
\end{tabular}

\textsuperscript{*} Estimated value.\\
