crates/gridwell-writer-latex/tests/snapshots/snapshots__snapshot_minimal_1x1.snap
---
source: crates/gridwell-writer-latex/tests/snapshots.rs
expression: "render(\"minimal/minimal_1x1.json\")"
---
\begin{tabular}{l}
\toprule
Value \\
\midrule
Hello \\
\bottomrule
\end{tabular}
